--- a/index.html
+++ b/index.html
@@ -8,27 +8,28 @@
         
         <div id="pessoal">
             <div>
-                <h2>Meu nome é <i>Toti</i></h2>
-                Nasci no Rio de Janeiro, mas já sou também um pouco paulista e quem sabe em pouco tempo estou por todo o Brasil. 
+                <h2>Meu nome é <i>Wladimir Andrés Méndez Kochmansky</i></h2>
+                Nasci na Venezuela; nativo da Cidade de Maracaibo mas aqui no Rio tenho dois anos.
                 <br>
-                Sou uma startup social e tenho o propósito de inspirar a mudança na vida de refugiados. 
+                Sou Turismologista e tenho o propósito de inspirar as pessoas a conhecer a Cidade Maravillhosa. 
                 <br>
-                Faço isso conectando educação e diversidade para criar ambientes que fomentam a empatia e a criatividade. 
+                Quero conseguer isso passo a passo e no curso oferecido pela Toti pode me ajudar muito a lograr esse proposito, em outro momento vou explicar como. 
                 <br>
-                Meu email pessoal é <a href="mailto:contato@toti.site">contato@toti.site</a> e estou sempre disposto a conversar.
+                Meu email pessoal é <a href="wladox@outlook.com">wladox@outlook.com</a> e estou sempre disposto a conversar.
                 <br>
-                Para se inscrever como professor ou aluno vem no meu site: <a href="toti.site">Toti</a>
+                Para conhecer mais sobre esse projeto: <a href="https://www.instagram.com/adventure__rio/">@adventure__rio</a>
             </div>
         </div>
 
         <div id="profissional">
             <div>
                 <h2>Minhas experiências profissionais:</h2>
-                Já ajudei a formar diversos refugiados nas turmas do Rio de Janeiro e São Paulo.
+                Meu ultimo trabalho na Venezuela foi como Assistente Social; ajudando as comunidades urbanas, rurales e indigenas no desenvolvimento particular, sem dependencia do governo.
+                Agora meu ultimo e unico trabalho no Brasil foi no restaurante onde fazia multiples tarefas.
                 <br>
-                Vários já estão trabalhando na área!
+                Quero seguer absorvendo conhecimentos!
                 <br>
-                E agora estou formando pessoas online! <label style="font-size: xx-small;">Espero que esteja sendo bom :D</label>
+                Agora estou me formando no curso de Full Stack oferecido pela Toti! <label style="font-size: xx-small;">Espero que esteja sendo bom :D</label>
             </div>
         </div>
 
