--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div id="educacional">
             <div>
                 <h2>Minhas formações:</h2>     
-                Eu sou muita coisa... :)
+                Estudiei Metalurgía mais nao culminei
                 <br>
-                Sou desenvolvedor web, sou engenheiro, sou pedagogo, ... e muito mais!
+                Sou Turismologista e entusiasta da blockchain.
                 <br>
                 Sou um pouquinho de cada um que passou por mim!
             </div>
