--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <br>
                 Sou Turismologista e entusiasta da blockchain.
                 <br>
-                Sou um pouquinho de cada um que passou por mim!
+                Quero seguer os estudios!
             </div>
         </div>
 
